# image_atlas

./: .gitignore  config.py.example  embed_and_compare.py  embedding.py  paths.py  pyproject.toml  readme.md  server.py  util.py
static/: index.html  script.js  styles.css
