[project]
name = "imagepile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.0",
    "numba>=0.65.1",
    "numpy>=2.2.6",
    "pillow>=12.2.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
    "umap-learn>=0.5.12",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
name = "pytorch-cu132"
url = "https://download.pytorch.org/whl/cu132"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu132", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
